Bug 242680 - KDevelop crashes when renaming files in project sidebar
Summary: KDevelop crashes when renaming files in project sidebar
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: 4.0.1
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-24 14:10 UTC by Martin Klapetek
Modified: 2010-08-31 02:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2010-06-24 14:10:26 UTC
Application: kdevelop (4.0.0 (using KDevPlatform 1.0.0))
KDE Platform Version: 4.4.85 (KDE 4.4.85 (KDE 4.5 Beta2))
Qt Version: 4.7.0
Operating System: Linux 2.6.34-38.fc14.x86_64 x86_64
Distribution: "Fedora release 13 (Goddard)"

-- Information about the crash:
- What I was doing when the application crashed:

I expanded the project sidebar, located one file, right clicked, selected Rename, a dialog poped up and immediately after that it crashed. Everytime.

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop.bin), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fa1838ce820 (LWP 13619))]

Thread 11 (Thread 0x7fa175d2a710 (LWP 13620)):
#0  0x0000003317a0b729 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac73582 in wait (this=<value optimized out>, mutex=0x1ad3e90, time=200000) at thread/qwaitcondition_unix.cpp:85
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1ad3e90, time=200000) at thread/qwaitcondition_unix.cpp:159
#3  0x00000031c1ab2efe in KDevelop::DUChainPrivate::CleanupThread::run (this=0x1ad3e70) at /usr/src/debug/kdevplatform-1.0.0/language/duchain/duchain.cpp:286
#4  0x00000031bac72afe in QThreadPrivate::start (arg=0x1ad3e70) at thread/qthread_unix.cpp:266
#5  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#6  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 10 (Thread 0x7fa16b9e8710 (LWP 13733)):
#0  0x00000033172d7de3 in poll () from /lib64/libc.so.6
#1  0x0000003318a3f849 in ?? () from /lib64/libglib-2.0.so.0
#2  0x0000003318a3fc9c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00000031bad7fa76 in QEventDispatcherGlib::processEvents (this=0x26d4400, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00000031bad56cf2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00000031bad56fbc in QEventLoop::exec (this=0x7fa16b9e7d30, flags=...) at kernel/qeventloop.cpp:201
#6  0x00000031bac6fe3b in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:495
#7  0x00000031bac72afe in QThreadPrivate::start (arg=0x26ce780) at thread/qthread_unix.cpp:266
#8  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#9  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 9 (Thread 0x7fa16c3e9710 (LWP 13734)):
#0  0x0000003318a3f26c in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#1  0x0000003318a3f6b8 in ?? () from /lib64/libglib-2.0.so.0
#2  0x0000003318a3fc9c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00000031bad7fa76 in QEventDispatcherGlib::processEvents (this=0x26eeb40, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00000031bad56cf2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00000031bad56fbc in QEventLoop::exec (this=0x7fa16c3e8d30, flags=...) at kernel/qeventloop.cpp:201
#6  0x00000031bac6fe3b in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:495
#7  0x00000031bac72afe in QThreadPrivate::start (arg=0x26db4b0) at thread/qthread_unix.cpp:266
#8  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#9  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7fa16493c710 (LWP 13735)):
#0  0x0000003317a0b729 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac72055 in thread_sleep (ti=0x7fa16493bcf0) at thread/qthread_unix.cpp:416
#2  0x00000031bac721c0 in QThread::msleep (msecs=<value optimized out>) at thread/qthread_unix.cpp:442
#3  0x00007fa165d22721 in UIBlockTester::UIBlockTesterThread::run (this=0x26ce1d0) at /usr/src/debug/kdevelop-4.0.0/languages/cpp/cpplanguagesupport.cpp:678
#4  0x00000031bac72afe in QThreadPrivate::start (arg=0x26ce1d0) at thread/qthread_unix.cpp:266
#5  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#6  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7fa163d3b710 (LWP 13739)):
#0  0x0000003317a0b3bc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031c1183dd4 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x31c1488be0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00000031c1183e09 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x31c1496cb4) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#4  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7fa161a31710 (LWP 13871)):
#0  0x0000003317a0b3bc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac7361b in wait (this=<value optimized out>, mutex=0x19d2280, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x19d2280, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00000031c5809f86 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x19d32d0, th=0x6b75030) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00000031c580c4ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x19d2c00, th=0x6b75030) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00000031c580ae6f in ThreadWeaver::ThreadRunHelper::run (this=0x7fa161a30d40, parent=0x19d32d0, th=0x6b75030) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:87
#6  0x00000031c580b358 in ThreadWeaver::Thread::run (this=0x6b75030) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:142
#7  0x00000031bac72afe in QThreadPrivate::start (arg=0x6b75030) at thread/qthread_unix.cpp:266
#8  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#9  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7fa161030710 (LWP 13872)):
#0  0x0000003317a0b3bc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac7361b in wait (this=<value optimized out>, mutex=0x19d2280, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x19d2280, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00000031c5809f86 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x19d32d0, th=0x571d560) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00000031c580c4ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x19d2c00, th=0x571d560) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00000031c580c4c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x19d2c00, th=0x571d560) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00000031c580c4c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x19d2c00, th=0x571d560) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00000031c580ae6f in ThreadWeaver::ThreadRunHelper::run (this=0x7fa16102fd40, parent=0x19d32d0, th=0x571d560) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:87
#8  0x00000031c580b358 in ThreadWeaver::Thread::run (this=0x571d560) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:142
#9  0x00000031bac72afe in QThreadPrivate::start (arg=0x571d560) at thread/qthread_unix.cpp:266
#10 0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#11 0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7fa1729f4710 (LWP 13932)):
#0  0x0000003317a0b3bc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac7361b in wait (this=<value optimized out>, mutex=0x6283390, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x6283390, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00000031c5809f86 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x70a9990, th=0x3625cd0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00000031c580c4ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x71e6780, th=0x3625cd0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00000031c580c4c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x71e6780, th=0x3625cd0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00000031c580ae6f in ThreadWeaver::ThreadRunHelper::run (this=0x7fa1729f3d40, parent=0x70a9990, th=0x3625cd0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:87
#7  0x00000031c580b358 in ThreadWeaver::Thread::run (this=0x3625cd0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:142
#8  0x00000031bac72afe in QThreadPrivate::start (arg=0x3625cd0) at thread/qthread_unix.cpp:266
#9  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#10 0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fa15fb38710 (LWP 13933)):
#0  0x0000003317a0b3bc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac7361b in wait (this=<value optimized out>, mutex=0x6283390, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x6283390, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00000031c5809f86 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x70a9990, th=0x1f265d0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00000031c580c4ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x71e6780, th=0x1f265d0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00000031c580ae6f in ThreadWeaver::ThreadRunHelper::run (this=0x7fa15fb37d40, parent=0x70a9990, th=0x1f265d0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:87
#6  0x00000031c580b358 in ThreadWeaver::Thread::run (this=0x1f265d0) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:142
#7  0x00000031bac72afe in QThreadPrivate::start (arg=0x1f265d0) at thread/qthread_unix.cpp:266
#8  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#9  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fa15f137710 (LWP 13934)):
#0  0x0000003317a0b3bc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00000031bac7361b in wait (this=<value optimized out>, mutex=0x6283390, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x6283390, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00000031c5809f86 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x70a9990, th=0x5c72620) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00000031c580c4ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x71e6780, th=0x5c72620) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00000031c580ae6f in ThreadWeaver::ThreadRunHelper::run (this=0x7fa15f136d40, parent=0x70a9990, th=0x5c72620) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:87
#6  0x00000031c580b358 in ThreadWeaver::Thread::run (this=0x5c72620) at /usr/src/debug/kdelibs-4.4.85/threadweaver/Weaver/Thread.cpp:142
#7  0x00000031bac72afe in QThreadPrivate::start (arg=0x5c72620) at thread/qthread_unix.cpp:266
#8  0x0000003317a07761 in start_thread () from /lib64/libpthread.so.0
#9  0x00000033172e14dd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fa1838ce820 (LWP 13619)):
[KCrash Handler]
#6  KDevelop::Declaration::context (this=0x0) at /usr/src/debug/kdevplatform-1.0.0/language/duchain/declaration.cpp:359
#7  0x00007fa17486c6cd in followUses (doc=0x3bf24c0, r=..., name=..., lists=..., add=false, replace=...) at /usr/src/debug/kdevelop-4.0.0/projectmanagers/cmake/cmakemanager.cpp:1083
#8  0x00007fa17486ca2d in followUses (doc=0x3bf24c0, r=..., name=..., lists=..., add=false, replace=...) at /usr/src/debug/kdevelop-4.0.0/projectmanagers/cmake/cmakemanager.cpp:1107
#9  0x00007fa17486e99f in CMakeManager::renameFile (this=<value optimized out>, it=0x5e73ec0, newUrl=...) at /usr/src/debug/kdevelop-4.0.0/projectmanagers/cmake/cmakemanager.cpp:1334
#10 0x00000031c0813fc7 in KDevelop::ProjectFileItem::setData (this=0x5e73ec0, value=<value optimized out>, role=<value optimized out>)
    at /usr/src/debug/kdevplatform-1.0.0/project/projectmodel.cpp:440
#11 0x00007fa16a56cb73 in ProjectManagerViewPlugin::renameItemFromContextMenu (this=<value optimized out>)
    at /usr/src/debug/kdevplatform-1.0.0/plugins/projectmanagerview/projectmanagerviewplugin.cpp:494
#12 0x00007fa16a56f194 in ProjectManagerViewPlugin::qt_metacall (this=0x1d19090, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff7ef7a4b0)
    at /usr/src/debug/kdevplatform-1.0.0/x86_64-redhat-linux-gnu/plugins/projectmanagerview/projectmanagerviewplugin.moc:126
#13 0x00000031bad6b676 in QMetaObject::activate (sender=0x3d0eb60, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff7ef7a4b0) at kernel/qobject.cpp:3305
#14 0x00000031bb3ab482 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#15 0x00000031bb3ac88b in QAction::activate (this=0x3d0eb60, event=<value optimized out>) at kernel/qaction.cpp:1255
#16 0x00000031bb7cdff5 in QMenuPrivate::activateCausedStack (this=0xb5c00a0, causedStack=..., action=0x3d0eb60, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1003
#17 0x00000031bb7d377a in QMenuPrivate::activateAction (this=0xb5c00a0, action=0x3d0eb60, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1095
#18 0x00000031bdce42be in KMenu::mouseReleaseEvent (this=0x7fff7ef7be20, e=<value optimized out>) at /usr/src/debug/kdelibs-4.4.85/kdeui/widgets/kmenu.cpp:471
#19 0x00000031bb3fc652 in QWidget::event (this=0x7fff7ef7be20, event=0x7fff7ef7b100) at kernel/qwidget.cpp:8090
#20 0x00000031bb7d4d3b in QMenu::event (this=0x7fff7ef7be20, e=0x7fff7ef7b100) at widgets/qmenu.cpp:2420
#21 0x00000031bb3b15fc in QApplicationPrivate::notify_helper (this=0x1645e40, receiver=0x7fff7ef7be20, e=0x7fff7ef7b100) at kernel/qapplication.cpp:4345
#22 0x00000031bb3b7cce in QApplication::notify (this=<value optimized out>, receiver=0x7fff7ef7be20, e=0x7fff7ef7b100) at kernel/qapplication.cpp:3910
#23 0x00000031bdc1b136 in KApplication::notify (this=0x7fff7ef7dbb0, receiver=0x7fff7ef7be20, event=0x7fff7ef7b100) at /usr/src/debug/kdelibs-4.4.85/kdeui/kernel/kapplication.cpp:302
#24 0x00000031bad57e9c in QCoreApplication::notifyInternal (this=0x7fff7ef7dbb0, receiver=0x7fff7ef7be20, event=0x7fff7ef7b100) at kernel/qcoreapplication.cpp:726
#25 0x00000031bb3b5fde in sendEvent (receiver=0x7fff7ef7be20, event=0x7fff7ef7b100, alienWidget=0x0, nativeWidget=0x7fff7ef7be20, buttonDown=0x31bbe65f18, lastMouseReceiver=..., spontaneous=true)
    at ../../src/corelib/kernel/qcoreapplication.h:215
#26 QApplicationPrivate::sendMouseEvent (receiver=0x7fff7ef7be20, event=0x7fff7ef7b100, alienWidget=0x0, nativeWidget=0x7fff7ef7be20, buttonDown=0x31bbe65f18, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:3010
#27 0x00000031bb42b04d in QETWidget::translateMouseEvent (this=0x7fff7ef7be20, event=<value optimized out>) at kernel/qapplication_x11.cpp:4337
#28 0x00000031bb42953c in QApplication::x11ProcessEvent (this=0x7fff7ef7dbb0, event=0x7fff7ef7ba20) at kernel/qapplication_x11.cpp:3536
#29 0x00000031bb4526f2 in x11EventSourceDispatch (s=0x1649c90, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x0000003318a3bd02 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#31 0x0000003318a3fae8 in ?? () from /lib64/libglib-2.0.so.0
#32 0x0000003318a3fc9c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#33 0x00000031bad7fa23 in QEventDispatcherGlib::processEvents (this=0x15ddbf0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#34 0x00000031bb45227e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x00000031bad56cf2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#36 0x00000031bad56fbc in QEventLoop::exec (this=0x7fff7ef7bd50, flags=...) at kernel/qeventloop.cpp:201
#37 0x00000031bb7d0dc5 in QMenu::exec (this=<value optimized out>, p=<value optimized out>, action=0x0) at widgets/qmenu.cpp:2064
#38 0x00007fa16a5729c3 in ProjectTreeView::popupContextMenu (this=0x203fd00, pos=...) at /usr/src/debug/kdevplatform-1.0.0/plugins/projectmanagerview/projecttreeview.cpp:217
#39 0x00007fa16a572ca1 in ProjectTreeView::qt_metacall (this=0x203fd00, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff7ef7c160)
    at /usr/src/debug/kdevplatform-1.0.0/x86_64-redhat-linux-gnu/plugins/projectmanagerview/projecttreeview.moc:81
#40 0x00000031bad6b676 in QMetaObject::activate (sender=0x203fd00, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff7ef7c160) at kernel/qobject.cpp:3305
#41 0x00000031bb3f0502 in QWidget::customContextMenuRequested (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qwidget.cpp:360
#42 0x00000031bb3fca21 in QWidget::event (this=0x203fd00, event=0x7fff7ef7cd60) at kernel/qwidget.cpp:8260
#43 0x00000031bb793426 in QFrame::event (this=0x203fd00, e=0x7fff7ef7cd60) at widgets/qframe.cpp:557
#44 0x00000031bb8aeeeb in QAbstractItemView::viewportEvent (this=0x203fd00, event=0x7fff7ef7cd60) at itemviews/qabstractitemview.cpp:1615
#45 0x00000031bb8ebbf5 in QTreeView::viewportEvent (this=0x203fd00, event=0x7fff7ef7cd60) at itemviews/qtreeview.cpp:1256
#46 0x00000031bad576c7 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x2069420, event=0x7fff7ef7cd60) at kernel/qcoreapplication.cpp:841
#47 0x00000031bb3b15cc in QApplicationPrivate::notify_helper (this=0x1645e40, receiver=0x2069420, e=0x7fff7ef7cd60) at kernel/qapplication.cpp:4341
#48 0x00000031bb3b7679 in QApplication::notify (this=<value optimized out>, receiver=0x2069420, e=0x7fff7ef7cd60) at kernel/qapplication.cpp:3989
#49 0x00000031bdc1b136 in KApplication::notify (this=0x7fff7ef7dbb0, receiver=0x2069420, event=0x7fff7ef7cd60) at /usr/src/debug/kdelibs-4.4.85/kdeui/kernel/kapplication.cpp:302
#50 0x00000031bad57e9c in QCoreApplication::notifyInternal (this=0x7fff7ef7dbb0, receiver=0x2069420, event=0x7fff7ef7cd60) at kernel/qcoreapplication.cpp:726
#51 0x00000031bb42ac22 in QETWidget::translateMouseEvent (this=<value optimized out>, event=<value optimized out>) at kernel/qapplication_x11.cpp:4408
#52 0x00000031bb42953c in QApplication::x11ProcessEvent (this=0x7fff7ef7dbb0, event=0x7fff7ef7d6b0) at kernel/qapplication_x11.cpp:3536
#53 0x00000031bb4526f2 in x11EventSourceDispatch (s=0x1649c90, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#54 0x0000003318a3bd02 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#55 0x0000003318a3fae8 in ?? () from /lib64/libglib-2.0.so.0
#56 0x0000003318a3fc9c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#57 0x00000031bad7fa23 in QEventDispatcherGlib::processEvents (this=0x15ddbf0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#58 0x00000031bb45227e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#59 0x00000031bad56cf2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#60 0x00000031bad56fbc in QEventLoop::exec (this=0x7fff7ef7d9e0, flags=...) at kernel/qeventloop.cpp:201
#61 0x00000031bad5aedb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#62 0x00000000004084ef in main (argc=23354592, argv=0x7fff00000000) at /usr/src/debug/kdevelop-4.0.0/app/main_internal.cpp:232

Reported using DrKonqi
Comment 1 Aleix Pol 2010-08-31 02:12:00 UTC
commit b82b0b5fab332d90b7dae3fcd68e3829c4700d7c
Author: Aleix Pol <aleixpol@kde.org>
Date:   Mon Aug 30 16:14:38 2010 +0200

    Prevent crash while renaming.
    
    BUG: 242680

diff --git a/projectmanagers/cmake/cmakemanager.cpp b/projectmanagers/cmake/cmakemanager.cpp
index 17c43e6..03de133 100644
--- a/projectmanagers/cmake/cmakemanager.cpp
+++ b/projectmanagers/cmake/cmakemanager.cpp
@@ -1093,7 +1093,7 @@ bool followUses(KTextEditor::Document* doc, SimpleRange r, const QString& name,
 
             Declaration* d=u.usedDeclaration(topctx);
 
-            if(d->context()->topContext()->url().toUrl()==lists)
+            if(d && d->context()->topContext()->url().toUrl()==lists)
                 decls += d;
         }