Prevent crash while renaming.

BUG: 242680